--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jest": "^28.1.3",
