--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL= mongodb+srv://Sajani:*sajani0729@spm-assignmnet.debux8m.mongodb.net/spm_assignment
+MONGODB_URL=mongodb+srv://Sajani:*sajani0729@spm-assignment.psghtl4.mongodb.net/Institute
