--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-free": "^6.1.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material/icon-button": "^14.0.0",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "axios": "^0.27.2",
     "koa": "^2.13.4",
     "material-icons": "^1.11.10",
@@ -21,6 +28,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "process": "^0.11.10"
   }
 }
