--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "axios": "^0.27.2",
     "koa": "^2.13.4",
     "material-icons": "^1.11.10",
