--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "util": "^0.12.4",
     "validator": "^13.7.0"
