--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.10.3",
     "axios": "^0.27.2",
     "file-saver": "^2.0.5",
-    "firebase": "^9.9.3",
+    "firebase": "^9.10.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "material-icons": "^1.11.11",
     "parcel": "^2.7.0",
@@ -35,6 +36,10 @@
   },
   "devDependencies": {
     "buffer": "^6.0.3",
-    "process": "^0.11.10"
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4"
   }
 }
