--- a/backend/package.json
+++ b/backend/package.json
@@ -21,14 +21,12 @@
     "express": "^4.18.1",
     "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
-
     "path": "^0.12.7",
-
     "pdfkit": "^0.13.0",
-
     "util": "^0.12.4",
     "validator": "^13.7.0"
   }
